2002-08-28  Mark Salter  <msalter@redhat.com>

	* src/smsc_lan91cxx.h: Support 32-bit data reads.
	* src/if_lan91cxx.c: Fix standalone (RedBoot) interrupt handling.
	Support 32-bit data reads.

2002-08-16  Mark Salter  <msalter@redhat.com>

	* src/if_lan91cxx.c: Add support for 91C111. Platform-specific
	include file is now included from within smsc_lan91cxx.h so
	that register access functions may be overridden if necessary.
	* src/smsc_lan91cxx.h: Ditto.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_lan91cxx.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2001-12-12  Hugo Tyson  <hmt@redhat.com>

	* src/if_lan91cxx.c (lan91cxx_recv): If discarding data due to
	caller out of buffers, we must read-out and discard the packet to
	correctly complete the transaction.  Bogus assert for buffer
	pointer removed; other asserts from not discarding data assuaged
	by first change above.

2001-08-17  Hugo Tyson  <hmt@redhat.com>

	* src/if_lan91cxx.c (lan91cxx_poll): The interrupt acknowledge
	call only occurs in the ISR for this driver because the interrupt
	via GPIO is edge triggered.  We now also acknowledge the interrupt
	within the poll() routine - otherwise RedBoot net use never acks!
	Which doesn't matter if the app uses the net, but in a net-free
	app, it near enough wedges in the resulting interrupt loop.

2001-08-13  Hugo Tyson  <hmt@redhat.com>

	* src/smsc_lan91cxx.h (get_att,put_att): Condition out the inline
	functions if not CYGINT_DEVS_ETH_SMSC_LAN91CXX_PCMCIA_MODE -
	because they don't compile.  Inlines are not like macros.

2001-07-27  Jordi Colomer  <jco@ict.es>

	* cdl/smsc_lan91cxx_eth_drivers.cdl:
	Add interface for whether the hardware is in PCMCIA mode.
	* src/if_lan91cxx.c (smsc_lan91cxx_init):
	Allow for hardware shift addresses
	Initialize appropriately if PCMCIA mode.
	* src/smsc_lan91cxx.h: